add date in swagger json
