# models/User.js
@@ -25,7 +25,7 @@ const schemaUser = new Schema(
     },
 
     token: String,
-    avatarURL: String,
+   
     verify: {
       type: Boolean,
       default: false,
